# Wildcard_master

./: .gitignore  AVX-AVX2 Instructions  CMakeLists.txt  DEBUG_KMP_arbitrary_length_wildcard.h  Experiment_wildcard.h  Experimental_wildcard.h  Introduction.txt  KMP_arbitrary_length_wildcard.h  New_Wildcard.h  README.md  SMART_PackedFilter_Code  SMART_PreTest  V2.2  V2.3  V4.2  arbitrary_length  first_branchless.h  hashtable.h  main-2.c  main.c  perm_test.h  test-results-1000000.txt  tests.c  wildcard.h  wildfilter.h
NewCard/: CMakeLists.txt  KMP_arbirary_length_wildcard.h  KMP_tester.h  arbitrary_length_wildcard.h  arbitrary_location.h  clean_experimental_wildcard.h  hashtable.h  main.c  overlapping_windows.h  rabin_karp.h  wildcard_redesign.h
NewCard/benchmarking/: Allesaandro.h  KMP.h  dynamic.h  krauss.h  krauss_tests.c  original_krauss.h  shift-or.h
benchmarking/: Allesaandro.h  krauss.h  krauss_tests.c  original_krauss.h  shift_or.h
unit_tests/: legacy_tests.h
